[package]
name = "my_textreplace-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
my_textreplace-common = { path = "../my_textreplace-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "my_textreplace"
path = "src/main.rs"
